schema/testdata/errors/where_expression_invalid_operands.keel
model Person {
    fields {
        identity Identity
        organisation Organisation
    }

    actions {
        list listPeople() {
            //expect-error:32:39:AttributeExpressionError:undeclared reference to 'invalid' (in container '')
            @where(expression: invalid)
        }
        list listPeople2() {
            //expect-error:32:62:AttributeExpressionError:undeclared reference to 'ct' (in container '')
            @where(expression: ct.identity == person.identity)
        }
        list listPeople3() {
            //expect-error:32:62:AttributeExpressionError:undefined field 'invalid'
            @where(expression: ctx.invalid == person.identity)
        }
        list listPeople4() {
            //expect-error:32:38:AttributeExpressionError:expression expected to resolve to type 'bool' but it is 'string'
            @where(expression: "true")
        }
        list listPeople5() {
            //expect-error:32:75:AttributeExpressionError:undeclared reference to '@in' (in container '')
            //expect-error:32:75:AttributeExpressionError:undefined field 'invalid'
            @where(expression: ctx.identity in person.organisation.invalid)
        }
        list listPeople6() {
            //expect-error:32:99:AttributeExpressionError:undeclared reference to '@in' (in container '')
            //expect-error:32:99:AttributeExpressionError:undefined field 'invalid'
            @where(expression: ctx.isAuthenticated and ctx.identity in person.organisation.invalid)
        }
        list listPeople7() {
            //expect-error:32:107:AttributeExpressionError:undefined field 'invalid'
            //expect-error:32:107:AttributeExpressionError:undeclared reference to '@in' (in container '')
            //expect-error:32:107:AttributeExpressionError:type 'bool' does not support field selection
            @where(expression: ctx.isAuthenticated.invalid and ctx.identity in person.organisation.invalid)
        }
    }
}

model Organisation {
    fields {
        people Person[]
    }
}
